# tarot-daily

./: .gitignore  AGENTS.md  CLOUDFLARE_MIGRATION.md  CRUSH.md  CURRENT_PLAN.md  DESIGN_GUIDE.md  IMPLEMENTATION_PLAN.md  NIX_GUIDE.md  README.md  docker-compose.yml  flake.nix  package.json  tsconfig.base.json
apps/db/: docker-compose.yml  init.sql
apps/pipeline/: Dockerfile  Dockerfile.nix  README.md  build-docker.sh  pyproject.toml  start_server.sh
apps/pipeline/src/daily_tarot_pipeline/: cli.py  config.py  datasets.py  duckdb_store.py  mlflow_tracker.py  models.py  postgres_store.py
apps/pipeline/src/daily_tarot_pipeline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
apps/pipeline/src/daily_tarot_pipeline/evaluate/: metrics.py
apps/pipeline/src/daily_tarot_pipeline/optimizers/: mipro.py
apps/pipeline/tests/: test_datasets.py
apps/web/: Dockerfile  app.config.ts  next.config.mjs  package.json  solid.config.ts  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vite.config.ts.bak  vitest.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: FeedbackWidget.tsx  HistoryClient.tsx  HomeClient.tsx  IntentForm.tsx  Navigation.tsx  ReadingDisplay.tsx  SettingsClient.tsx
apps/web/lib/: api-client.ts  json.ts  random.ts  seed.ts  telemetry.ts
infra/docs/: DATABASE_INITIALIZATION.md  DATA_DICTIONARY.md  EXPERIMENT_PLAYBOOK.md  ROLLBACK_GUIDE.md
infra/scripts/: create_telemetry_tables.sql  feature-flags.json  init.sql  migrate_feedback_schema.sql  migrate_readings_schema.sql
(+63 files in other folders)
