[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[project]
name = "daily-tarot-pipeline"
version = "0.1.0"
description = "Offline DSPy optimization and analytics pipeline for Tarot Daily"
readme = "README.md"
authors = [{ name = "Daily Tarot" }]
requires-python = ">=3.10"
dependencies = [
  "dspy-ai>=2.4.0",
  "duckdb>=0.10.2",
  "python-dotenv>=1.0.1",
  "typer[all]>=0.9.0",
  "pydantic>=2.6.3",
  "rich>=13.7.1",
  "pandas>=2.2.1"
]

[project.optional-dependencies]
dev = ["pytest>=8.1.1", "pytest-asyncio>=0.23.5"]

[project.scripts]
tarot-pipeline = "daily_tarot_pipeline.cli:app"
