[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[project]
name = "daily-tarot-pipeline"
version = "0.1.0"
description = "Offline DSPy optimization and analytics pipeline for Tarot Daily"
readme = "README.md"
authors = [{ name = "Daily Tarot" }]
requires-python = ">=3.13"
dependencies = [
  "dspy",
  "psycopg[binary]==3.2.3",
  "python-dotenv",
  "pydantic",
  "pydantic-settings",
  "rich",
  "pandas",
  "typer",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[project.scripts]
tarot-pipeline = "daily_tarot_pipeline.cli:app"
